@@ -25,7 +25,29 @@ site = AdultSite("hentaidude", "[COLOR hotpink]Hentaidude[/COLOR]", 'https://hen
 
 @site.register(default_mode=True)
 def Main():
-    site.add_dir('[COLOR hotpink]Uncensored[/COLOR]', site.url + 'tag/uncensored/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Uncensored[/COLOR]', site.url + 'genre/uncensored-hentai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]3D[/COLOR]', site.url + 'genre/3d-hentai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Anal[/COLOR]', site.url + 'genre/anal/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]BBw[/COLOR]', site.url + 'genre/bbw/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]BDSM[/COLOR]', site.url + 'genre/bdsm/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Femdom[/COLOR]', site.url + 'genre/femdom/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Furry[/COLOR]', site.url + 'genre/furry/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Futanari[/COLOR]', site.url + 'genre/gender-bender-heantai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Harem[/COLOR]', site.url + 'genre/harem/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Horror[/COLOR]', site.url + 'genre/horror/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Incest[/COLOR]', site.url + 'genre/incest-hentai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]MILF[/COLOR]', site.url + 'genre/milf/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Monster[/COLOR]', site.url + 'genre/monster/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Romance[/COLOR]', site.url + 'genre/romance/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]School[/COLOR]', site.url + 'genre/hentai-school/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Shota[/COLOR]', site.url + 'genre/shota/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Shotacon[/COLOR]', site.url + 'genre/shotocon/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Softcore[/COLOR]', site.url + 'genre/softcore/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Tentacle[/COLOR]', site.url + 'genre/tentacle/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Tsundere[/COLOR]', site.url + 'genre/tsundere/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Teen[/COLOR]', site.url + 'genre/teen-hentai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Young[/COLOR]', site.url + 'genre/young-hentai/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
+    site.add_dir('[COLOR hotpink]Yuri[/COLOR]', site.url + 'genre/yuri/page/1/?m_orderby=latest', 'List', site.img_cat, 1)
     site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + 'page/1/?s=', 'Search', site.img_search)
     List(site.url + 'page/1/?m_orderby=latest')
 
